crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__transcript__tests__transcript_status_entry_normal.snap
---
source: crates/thndrs/src/cli/renderer/transcript/tests.rs
expression: contents
---
│                                                                                   # [-]=                                                                                
│   │ Context                                                                       # [-]=   [fg=#6473b7]=│  [fg=#6473b7 b]=Context [-]=                                                                    [-]=  
│   │ context AGENTS.md (scope: .)                                                  # [-]=   [fg=#6473b7]=│  [fg=#ebfafa]=context AGENTS.md (scope: .) [-]=                                               [-]=
