crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__transcript__tests__transcript_tool_failed_compiler.snap
---
source: crates/thndrs/src/cli/renderer/transcript/tests.rs
expression: contents
---
│                                                                                   # [-]=
│   │ Activity                                                                      # [-]=   [fg=#3b4261]=│  [fg=#f1fc79 b]=Activity [-]=                                                                   [-]=
│   │ ✕ run_shell [Failed]  $ cargo test                                            # [-]=   [fg=#3b4261]=│  [fg=#f16c75]=✕  [fg=#ebfafa b]=run_shell [fg=#f16c75]= [Failed] [-]=   [fg=#abb4da]=$ cargo test [-]=                                         [-]=
│   │    │    Compiling thndrs v0.1.0                                               # [-]=   [fg=#3b4261]=│  [fg=#3b4261]=   │  [fg=#c0c5ce]=    [fg=#8fa1b3]=Compiling [fg=#c0c5ce]= thndrs v0.1.0 [-]=                                            [-]=
│   │    │ error[E0277]: the trait bound `X: Y` is not satisfied                    # [-]=   [fg=#3b4261]=│  [fg=#3b4261]=   │  [fg=#8fa1b3]=error[E0277]: [fg=#c0c5ce]= the trait bound  [fg=#c0c5ce]=` [fg=#8fa1b3]=X: [fg=#c0c5ce]= Y [fg=#c0c5ce]=` [fg=#c0c5ce]= is not satisfied [-]=                 [-]=
│   │    │   --> src/lib.rs:42:10                                                   # [-]=   [fg=#3b4261]=│  [fg=#3b4261]=   │  [fg=#c0c5ce]=   [fg=#8fa1b3]=-- [fg=#c0c5ce]=> [fg=#c0c5ce]= src/lib.rs:42:10 [-]=                                                [-]=
│   │    │    |                                                                     # [-]=   [fg=#3b4261]=│  [fg=#3b4261]=   │  [fg=#c0c5ce]=    [fg=#c0c5ce]=| [-]=                                                                  [-]=
│   │    │ 42 |     fn foo() -> impl Y {                                            # [-]=   [fg=#3b4261]=│  [fg=#3b4261]=   │  [fg=#8fa1b3]=42 [fg=#c0c5ce]=  [fg=#c0c5ce]=| [fg=#c0c5ce]=      [fg=#8fa1b3]=fn [fg=#c0c5ce]= foo( [fg=#c0c5ce]=) [fg=#c0c5ce]=  [fg=#8fa1b3]=- [fg=#c0c5ce]=> [fg=#c0c5ce]= impl Y  [fg=#c0c5ce]={ [-]=                                         [-]=
│   │    │    |                    ^^^^^                                            # [-]=   [fg=#3b4261]=│  [fg=#3b4261]=   │  [fg=#c0c5ce]=   |                    ^^^^^ [-]=                                         [-]=
