crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__transcript__tests__transcript_tool_ok_highlighted.snap
---
source: crates/thndrs/src/cli/renderer/transcript/tests.rs
expression: contents
---
│                                                                                   # [-]=                                                                                
│   │ Activity                                                                      # [-]=   [fg=#3b4261]=│  [fg=#f1fc79 b]=Activity [-]=                                                                   [-]=  
│   │ ✓ run_shell [Done]  $ cargo build  2 lines · Ctrl+O actions                   # [-]=   [fg=#3b4261]=│  [fg=#37f499]=✓  [fg=#ebfafa b]=run_shell [fg=#37f499]= [Done] [-]=   [fg=#abb4da]=$ cargo build [fg=#abb4da]=  2 lines · Ctrl+O actions [-]=                [-]=
