crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__transcript__tests__transcript_tool_ok_normal.snap
---
source: crates/thndrs/src/cli/renderer/transcript/tests.rs
expression: contents
---
│                                                                                   # [-]=
│   │ Activity                                                                      # [-]=   [fg=#3b4261]=│  [fg=#f1fc79 b]=Activity [-]=                                                                   [-]=
│   │ ✓ search_text [Done]  pattern: fn main  3 lines · Ctrl+O actions              # [-]=   [fg=#3b4261]=│  [fg=#37f499]=✓  [fg=#ebfafa b]=search_text [fg=#37f499]= [Done] [-]=   [fg=#abb4da]=pattern: fn main [fg=#abb4da]=  3 lines · Ctrl+O actions [-]=           [-]=
