crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__transcript__tests__transcript_tool_running_narrow.snap
---
source: crates/thndrs/src/cli/renderer/transcript/tests.rs
expression: contents
---
│                                           # [-]=                                        
│     Activity                              # [-]=   [fg=#f1fc79]=   [fg=#f1fc79 b]=Activity [-]=                           [-]=  
│   │ · [Running] run_shell                 # [-]=   [fg=#f1fc79]=│  [fg=#f7c67f]=· [Running]  [fg=#ebfafa b]=run_shell [-]=              [-]=  
│   │   $ cargo test                        # [-]=   [fg=#f1fc79]=│  [-]=   [fg=#abb4da]=$ cargo test [-]=                     [-]=  
│   │   3 lines · Ctrl+O details            # [-]=   [fg=#f1fc79]=│  [-]=   [fg=#abb4da]=3 lines · Ctrl+O details [-]=         [-]=  
│   │    · running 3 tests                  # [-]=   [fg=#f1fc79]=│  [fg=#3b4261]=   ·  [fg=#abb4da]=running 3 tests [-]=               [-]=  
│   │    · test tests::foo ... ok           # [-]=   [fg=#f1fc79]=│  [fg=#3b4261]=   ·  [fg=#abb4da]=test tests::foo ... ok [-]=        [-]=  
│   │    · test tests::bar ... ok           # [-]=   [fg=#f1fc79]=│  [fg=#3b4261]=   ·  [fg=#abb4da]=test tests::bar ... ok [-]=        [-]=
